[gd_scene load_steps=5 format=3 uid="uid://gbp6mf6kpd3b"]

[ext_resource type="Script" path="res://ui/widgets/consumable_item_holder.gd" id="1_dvb6r"]
[ext_resource type="PackedScene" uid="uid://ba6rrbnc23vi1" path="res://ui/widgets/item_viewer.tscn" id="2_bj664"]
[ext_resource type="LabelSettings" uid="uid://bpr6t2q1y56ln" path="res://ui/themes/label_settings/info_label_settings.tres" id="3_jref0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l8j7t"]
bg_color = Color(0, 0, 0, 0.392157)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(0, 0, 0, 0.588235)
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="ConsumableItemHolder" type="MarginContainer"]
custom_minimum_size = Vector2(75, 75)
offset_right = 75.0
offset_bottom = 75.0
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
script = ExtResource("1_dvb6r")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_l8j7t")

[node name="ItemViewer" parent="." instance=ExtResource("2_bj664")]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
mouse_filter = 1

[node name="TextureRect" parent="ItemViewer" index="0"]
custom_minimum_size = Vector2(75, 75)

[node name="CountLabel" type="Label" parent="ItemViewer"]
layout_mode = 0
offset_top = 45.0
offset_right = 75.0
offset_bottom = 75.0
mouse_filter = 1
text = "0"
label_settings = ExtResource("3_jref0")
horizontal_alignment = 2
vertical_alignment = 2

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
focus_mode = 0

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]

[editable path="ItemViewer"]
